--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -1,47 +1,23 @@
-.navbar.navbar-inverse.navbar-fixed-top role="navigation"
-  .container
-    .navbar-header
-      button.navbar-toggle data-target=".navbar-collapse" data-toggle="collapse" type="button"
-        span.sr-only Toggle navigation
-        span.icon-bar
-        span.icon-bar
-        span.icon-bar
-      a.navbar-brand href="#" Bonnaroo Friends
-    .navbar-collapse.collapse
-      form.navbar-form.navbar-right role="form"
-        .form-group
-          input.form-control placeholder="Email" type="text"
-        .form-group
-          input.form-control placeholder="Password" type="password"
-        button.btn.btn-success type="submit"  Sign in
-
 .jumbotron
   .container
     h1 Hello, Bonnaroo!
-    p This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.
     p
-      a.btn.btn-primary.btn-lg role="button"  Learn more &raquo;
+      = "This is a website for checking out what show's your friends will be seeing at "
+      = link_to "Bonnaroo 2014!", "http://www.bonnaroo.com", target: "_blank"
+    p
+      = "First thing's first. You'll need to create a "
+      = link_to "custom schedule.", "http://lineup.bonnaroo.com/login", target: "_blank"
+      = " Once that's done, go to your profile and edit the section that says 'Profile Link'. Then fill out the simple form above!"
+
 .container
   .row
-    .col-md-4
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      p
-        a.btn.btn-default href="#" role="button"  View details &raquo;
-    .col-md-4
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-      p
-        a.btn.btn-default href="#" role="button"  View details &raquo;
-    .col-md-4
-      h2 Heading
-      p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-      p
-        a.btn.btn-default href="#" role="button"  View details &raquo;
+    .col-md-12
+      h2 And here's where your schedules would go!
+      p IF YOU HAD ONE.
   hr
     footer
       p
         = "This is an "
-        = link_to "open source", "http://github.com/gschorkopf/bonnaroo-friends"
+        = link_to "open source", "http://github.com/gschorkopf/bonnaroo-friends", target: "_blank"
         = " project written by "
-        = link_to "Geoff Schorkopf", "http://twitter.com/gschork"
+        = link_to "Geoff Schorkopf", "http://twitter.com/gschork", target: "_blank"
