Adds a few pretty colors

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,1 +1,13 @@
+#upper-content {
+  background-color: #EFF5FB;
+}
+
+#main-nav {
+  background-color: #0B0B61;
+}
+
+#navbar-brand {
+  color: white;
+}
+
 @import "bootstrap";
