--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,7 @@ html
     = javascript_include_tag 'application'
     = csrf_meta_tags
   body
-    .navbar.navbar-inverse.navbar-fixed-top role="navigation"
+    .navbar.navbar-inverse.navbar-fixed-top#main-nav role="navigation"
       .container
         .navbar-header
           button.navbar-toggle data-target=".navbar-collapse" data-toggle="collapse" type="button"
@@ -14,7 +14,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          = link_to "Bonnaroo Friends!", root_path, class: "navbar-brand"
+          = link_to "Bonnaroo Friends!", root_path, class: "navbar-brand", id: "navbar-brand"
         .navbar-collapse.collapse
           form.navbar-form.navbar-right role="form"
             .form-group
