--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -1,13 +1,13 @@
 .jumbotron#upper-content
   .container
-    h1 Hello, Bonnaroo!
+    h1 Hello, Fellow 'Roovians!
     p
-      = "This is a website for checking out what show's your friends will be seeing at "
+      = "This is a website for checking out what shows our friends will be seeing at "
       = link_to "Bonnaroo 2014!", "http://www.bonnaroo.com", target: "_blank"
     p
       = "First thing's first. You'll need to create a "
       = link_to "custom schedule.", "http://lineup.bonnaroo.com/login", target: "_blank"
-      = " Once that's done, go to your profile and edit the section that says 'Profile Link'. Then fill out the simple form above!"
+      = " Once that's done, go to your profile and edit the section that says 'Profile Link'. Then fill out the simple form below."
 
 .container
   .row
