Moves footer into partial

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,4 +11,5 @@ html
         .navbar-header
           = link_to "Bonnaroo Friends!", root_path, class: "navbar-brand", id: "navbar-brand"
     = yield
+    = render "shared/footer"
 
