--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,15 +1,15 @@
 doctype html
 html
   head
-    title Bonnaroo Friends!
     = stylesheet_link_tag 'application', media: 'all'
+    title Bonnaroo Friends
     = javascript_include_tag 'application'
     = csrf_meta_tags
   body
     .navbar.navbar-inverse.navbar-fixed-top#main-nav role="navigation"
       .container
         .navbar-header
-          = link_to "Bonnaroo Friends!", root_path, class: "navbar-brand", id: "navbar-brand"
+          = link_to "Bonnaroo Friends", root_path, class: "navbar-brand", id: "navbar-brand"
     = yield
     = render "shared/footer"
 
