--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -1,55 +1,26 @@
 = render "welcome"
 
 .container
-  ul.nav.nav-tabs
-    li.active
-      a data-toggle="tab" href="#thursday" Thursday
-    li
-      a data-toggle="tab" href="#friday" Friday
-    li
-      a data-toggle="tab" href="#saturday" Saturday
-    li
-      a data-toggle="tab" href="#sunday" Sunday
-  .tab-content
-    #thursday.tab-pane.active
-      h2 Thursday
-      ul.list-unstyled
-        - @thursday_shows.each do |show|
-          - if show.schedules.any?
-            li
-              = show.artist_name
-              ol
-                - show.schedules.each do |schedule|
-                  li = schedule.user.first_name
-    #friday.tab-pane
-      h2 Friday
-      ul.list-unstyled
-        - @friday_shows.each do |show|
-          - if show.schedules.any?
-            li
-              = show.artist_name
-              ol
-                - show.schedules.each do |schedule|
-                  li = schedule.user.first_name
-    #saturday.tab-pane
-      h2 Saturday
-      ul.list-unstyled
-        - @saturday_shows.each do |show|
-          - if show.schedules.any?
-            li
-              = show.artist_name
-              ol
-                - show.schedules.each do |schedule|
-                  li = schedule.user.first_name
-    #sunday.tab-pane
-      h2 Sunday
-      ul.list-unstyled
-        - @sunday_shows.each do |show|
-          - if show.schedules.any?
-            li
-              = show.artist_name
-              ol
-                - show.schedules.each do |schedule|
-                  li = schedule.user.first_name
-  hr
+  ul.nav.nav-pills
+    - @days.each_with_index do |day, i|
+      li class="#{'active' if i == 0}"
+        = link_to t("days.#{day}"), "##{day}", data: { toggle: 'pill' }
 
+  .tab-content
+    - @days.each_with_index do |day, i|
+      .tab-pane id="#{day}" class="#{'active' if i == 0}"
+        - @shows.where(day: day.titleize).each do |show|
+          - if show.schedules.any?
+            .panel.panel-default class="#{'panel-info' if current_schedule.attending?(show)}"
+              .panel-heading
+                ul.list-unstyled
+                  li
+                    strong= truncate(show.artist_name, length: 50)
+                    =< "#{show.starting_at.strftime('%l:%M %p')} - #{show.ending_at.strftime('%l:%M %p')}"
+                  li
+                    = show.location
+              .panel-body
+                span.badge.pull-right = show.schedules.count
+                ul.list-unstyled
+                  - show.schedules.each do |schedule|
+                    li = schedule.user.first_name
