--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,10 +7,7 @@ html
     = javascript_include_tag 'application'
     = csrf_meta_tags
   body
-    .navbar.navbar-inverse.navbar-fixed-top#main-nav role="navigation"
-      .container
-        .navbar-header
-          = link_to "Bonnaroo Friends", root_path, class: "navbar-brand", id: "navbar-brand"
+    = render "shared/header"
     = yield
     = render "shared/footer"
 
