--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,9 +1,10 @@
 .container
-  footer
+  hr
+  footer.centerize
     p
       = "This is an "
       = link_to "open source", "http://github.com/gschorkopf/bonnaroo-friends", target: "_blank"
       = " project written with "
-      span.glyphicon.glyphicon-heart.red
+      span.glyphicon.glyphicon-heart
       = "s by "
       = link_to "Geoff Schorkopf", "http://twitter.com/gschork", target: "_blank"
