--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta name="viewport" content="width=device-width, initial-scale=1"
-    title Bonnaroo Friends
+    title = t('misc.brand')
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
     = csrf_meta_tags
