Fixes up some JS breaking

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@
 .glyphicon-heart { color: red; }
 #brand-color { color: #0B0B61; }
 .centerize { text-align: center; }
+.hidden { display: none; }
 
 .nav-pills {
   padding-bottom: 15px;
