Adds an error for url if user enters a 404

--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -1,3 +1,3 @@
-= render "welcome"
+= render "dashboard/welcome"
 
-= render "schedule" unless current_schedule.not_uploaded?
+= render "dashboard/schedule" unless current_schedule.not_uploaded?
