--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -3,7 +3,7 @@
   footer.centerize
     p
       = "This is an "
-      = link_to "open source", "http://github.com/gschorkopf/bonnaroo-friends", target: "_blank"
+      = link_to "open source", "http://github.com/gschorkopf/roo-pals", target: "_blank"
       = " project written with "
       span.glyphicon.glyphicon-heart
       = "s by "
