Removes current user from option list

--- a/app/views/dashboard/_schedule.html.slim
+++ b/app/views/dashboard/_schedule.html.slim
@@ -1,6 +1,6 @@
 .container
   - @users.each do |user|
-    - unless user.schedule.not_uploaded?
+    - unless user.schedule.not_uploaded? || user == current_user
       p
         input.togglers checked='true' type="checkbox" data-target="li.schedule-#{user.schedule.id}"
           =< user.first_name
