--- a/app/views/dashboard/_welcome.html.slim
+++ b/app/views/dashboard/_welcome.html.slim
@@ -8,4 +8,4 @@
         = t('session.logged_in', user: current_user.first_name)
         =< "|"
         =< link_to t('session.log_out'), logout_path
-    = render 'dashboard/instructions' if current_schedule.not_uploaded?
+    = render 'dashboard/instructions'
