Adds popularity section to dashboard#show

--- a/app/views/dashboard/_schedule.html.slim
+++ b/app/views/dashboard/_schedule.html.slim
@@ -1,29 +1,29 @@
 .container
-  - @users.each do |user|
-    - unless user.schedule.not_uploaded? || user == current_user
-      p
-        input.togglers checked='true' type="checkbox" data-target="li.schedule-#{user.schedule.id}"
-          =< user.first_name
-
-  ul.nav.nav-pills
-    - @days.each_with_index do |day, i|
-      = schedule_navigator(day, i)
-
+  ul.nav.nav-tabs.nav-justified
+    li.active
+      = link_to "By Time", "#by-time", data: { toggle: 'tab' }
+    li
+      = link_to "By Popularity", "#by-popularity", data: { toggle: 'tab' }
+    li
+      = link_to "Filter Users", "#filter-users", data: { toggle: 'tab' }
+  br
   .tab-content
-    - @show_groups.each_with_index do |show_group, i|
-      .tab-pane id=@days[i] class=navigator_class(i)
-        - show_group.each do |show|
-          - if show.schedules.any?
-            .panel.panel-default class=current_schedule.attending_class(show)
-              .panel-heading
-                ul.list-unstyled
-                  li
-                    strong= show.artist_title
-                    =< show.time_frame
-                  li
-                    = show.location
-              .panel-body
-                span.badge.pull-right = show.schedules.count
-                ul.list-unstyled
-                  - show.schedules.each do |schedule|
-                    li class=schedule.schedule_class = schedule.user_name
+    .tab-pane#by-time.active
+      ul.nav.nav-pills
+        - @days.each_with_index do |day, i|
+          = schedule_navigator(day, i)
+
+      .tab-content
+        - @show_groups.each_with_index do |show_group, i|
+          .tab-pane id=@days[i] class=navigator_class(i)
+            - show_group.each do |show|
+              = render "shows/show", show: show, show_day: false unless show.schedules_count.zero?
+    .tab-pane#by-popularity
+      - @popularity.each do |show|
+        = render "shows/show", show: show, show_day: true unless show.schedules_count.zero?
+    .tab-pane#filter-users
+      - @users.each do |user|
+        - unless user.schedule.not_uploaded? || user == current_user
+          p
+            input.togglers checked='true' type="checkbox" data-target="li.schedule-#{user.schedule.id}"
+              =< user.first_name
