--- a/app/views/dashboard/_issues.html.slim
+++ b/app/views/dashboard/_issues.html.slim
@@ -10,4 +10,4 @@
           = f.input :label, collection: Issue.label_options
           = f.input :title
           = f.input :details, as: :text
-          = f.submit t('issue.submit'), class: "btn btn-primary btn-block"
+          = f.submit t('issue.submit'), class: "btn btn-primary btn-block add-loading"
