Adds some pretty CSS changes to header features

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
 
 #main-nav { background-color: #0B0B61; }
 #navbar-brand { color: white; }
+.navbar-links { color: #D8D8D8 !important; }
 .glyphicon-heart { color: red; }
 #brand-color { color: #0B0B61; }
 .centerize { text-align: center; }
