--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -11,8 +11,8 @@ nav.navbar.navbar-inverse.navbar-fixed-top#main-nav role="navigation"
         ul.nav.navbar-nav.navbar-right
           - unless current_schedule.not_uploaded?
             li
-              = link_to t('schedule.resync'), schedule_path(current_schedule), method: :put, id: "schedule-add", class: "add-loading"
+              = link_to t('schedule.resync'), schedule_path(current_schedule), method: :put, id: "schedule-add", class: "add-loading navbar-links"
           li
-            = link_to t('issue.link'), "#", data: { toggle: "modal", target: "#issueForm" }
+            = link_to t('issue.link'), "#", data: { toggle: "modal", target: "#issueForm" }, class: 'navbar-links'
           li
-            = link_to t('session.log_out'), logout_path
+            = link_to t('session.log_out'), logout_path, class: 'navbar-links'
