Adds link to scroll to top

--- a/app/views/dashboard/_schedule.html.slim
+++ b/app/views/dashboard/_schedule.html.slim
@@ -1,3 +1,6 @@
+= link_to "", id: 'scrollToTop', class: 'btn' do
+  span.glyphicon.glyphicon-circle-arrow-up
+
 .container
   ul.nav.nav-tabs.nav-justified
     li.active
