Adds JS and CSS to animate scroll up feature

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,3 +26,14 @@
   }
 }
 
+#scrollToTop{
+  text-align: center;
+  font-size: 30px;
+  color: #444;
+  position: fixed;
+  bottom: 50px;
+  right: 10px;
+  display: none;
+  opacity: 0.4;
+}
+
