--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html
     = csrf_meta_tags
   body
     = render "shared/header"
-    = yield
-    = render "shared/footer"
+    #app-body
+      = yield
+      = render "shared/footer"
 
