--- a/app/views/dashboard/_schedule.html.slim
+++ b/app/views/dashboard/_schedule.html.slim
@@ -6,9 +6,9 @@
     li.active
       = link_to t('dashboard.by_time'), "#by-time", data: { toggle: 'tab' }
     li
-      = link_to t('dashboard.by_poularity'), "#by-popularity", data: { toggle: 'tab' }
+      = link_to t('dashboard.by_popularity'), "#by-popularity", data: { toggle: 'tab' }
     li
-      = link_to t('dashboard.filter_user'), "#filter-users", data: { toggle: 'tab' }
+      = link_to t('dashboard.filter_users'), "#filter-users", data: { toggle: 'tab' }
   br
   .tab-content
     .tab-pane#by-time.active
