Removes welcome screen from dashboard#show on logged in

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,10 +2,11 @@
 
 .panel { margin-bottom: 10px; }
 
-#upper-content {
+#welcome {
   background-color: #EFF5FB;
   padding-top: 45px;
 }
+#app-container { padding-top: 60px; }
 
 #main-nav { background-color: #0B0B61; }
 #navbar-brand { color: white; }
