--- a/app/views/dashboard/_schedule.html.slim
+++ b/app/views/dashboard/_schedule.html.slim
@@ -1,7 +1,7 @@
 = link_to "", id: 'scrollToTop', class: 'btn' do
   span.glyphicon.glyphicon-circle-arrow-up
 
-.container
+.container#app-container
   ul.nav.nav-tabs.nav-justified
     li.active
       = link_to t('dashboard.by_time'), "#by-time", data: { toggle: 'tab' }
