--- a/app/views/dashboard/_instructions.html.slim
+++ b/app/views/dashboard/_instructions.html.slim
@@ -1,10 +1,16 @@
-p
-  => t('dashboard.instruction_intro', user: current_user.first_name)
-  => link_to t('dashboard.custom_schedule'), "http://lineup.bonnaroo.com/login", target: "_blank"
-  = t('dashboard.profile_link')
+.jumbotron#welcome
+  .container
+    header.centerize
+      h1
+        => t('dashboard.welcome')
+        span#brand-color = t('misc.brand')
+    p
+      => t('dashboard.instruction_intro', user: current_user.first_name)
+      => link_to t('dashboard.custom_schedule'), "http://lineup.bonnaroo.com/login", target: "_blank"
+      = t('dashboard.profile_link')
 
-p = t('dashboard.profile_example')
+    p = t('dashboard.profile_example')
 
-= simple_form_for @schedule do |f|
-  = f.input :profile_name, label: false, placeholder: t('schedule.profile_name')
-  = f.submit t('schedule.add'), id: "schedule-add", class: "btn btn-primary btn-block add-loading"
+    = simple_form_for @schedule do |f|
+      = f.input :profile_name, label: false, placeholder: t('schedule.profile_name')
+      = f.submit t('schedule.add'), id: "schedule-add", class: "btn btn-primary btn-block add-loading"
