--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -1,5 +1,6 @@
 = render 'dashboard/issues'
 
-= render "dashboard/welcome"
-
-= render "dashboard/schedule" unless current_schedule.not_uploaded?
+- if current_schedule.not_uploaded?
+  = render "dashboard/instructions"
+- else
+  = render "dashboard/schedule" unless current_schedule.not_uploaded?
