--- a/app/views/dashboard/_schedule.html.slim
+++ b/app/views/dashboard/_schedule.html.slim
@@ -20,10 +20,10 @@
         - @show_groups.each_with_index do |show_group, i|
           .tab-pane id=@days[i] class=navigator_class(i)
             - show_group.each do |show|
-              = render "shows/show", show: show, show_day: false unless show.schedules_count.zero?
+              = render "shows/show", show: show, show_day: false unless show.schedules.count.zero?
     .tab-pane#by-popularity
       - @popularity.each do |show|
-        = render "shows/show", show: show, show_day: true unless show.schedules_count.zero?
+        = render "shows/show", show: show, show_day: true unless show.schedules.count.zero?
     .tab-pane#my-pals
       - @users.each do |user|
         - unless user.schedule.not_uploaded? || user == current_user
