--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,7 @@
 #brand-color { color: #0B0B61; }
 .centerize { text-align: center; }
 .hidden { display: none; }
+#relationship-submit { margin-bottom: 20px; }
 
 .nav-pills {
   padding-bottom: 15px;
