--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
 #navbar-brand { color: white; }
 .navbar-links { color: #D8D8D8 !important; }
 .glyphicon-heart { color: red; }
+.glyphicon-ok { color: green; }
 #brand-color { color: #0B0B61; }
 .centerize { text-align: center; }
 .hidden { display: none; }
