--- a/app/views/dashboard/_schedule.html.slim
+++ b/app/views/dashboard/_schedule.html.slim
@@ -19,11 +19,13 @@
     .tab-pane#by-time.active
       ul.nav.nav-pills
         - @days.each_with_index do |day, i|
-          = schedule_navigator(day, i)
+          = day_navigator(day, i)
 
       ul.nav.nav-pills
-        - @stages.each_with_index do |stage, i|
-          = stage_navigator(stage, i)
+        li.active.togglers
+          = link_to t('stages.all'), "#", data: { toggle: 'pill', stage: ".all" }
+        - @stages.each do |stage|
+          = stage_navigator(stage)
 
       .tab-content
         - @show_groups.each_with_index do |show_group, i|
