Adds #show_classes

--- a/app/views/shows/_show.html.slim
+++ b/app/views/shows/_show.html.slim
@@ -1,4 +1,4 @@
-.panel.panel-default class=current_schedule.attending_class(show)
+.panel.panel-default.show class=current_schedule.attending_class(show) class=show.show_classes(always_show: show_day)
   .panel-heading
     ul.list-unstyled
       li
