--- a/app/views/relationships/_index.html.slim
+++ b/app/views/relationships/_index.html.slim
@@ -1,6 +1,6 @@
 h3 = t('relationship.header')
 = simple_form_for Relationship.new, url: relationships_path, method: :post do |f|
-  .input-group#follow-autocomplete data-autocomplete=@followable_users.map(&:full_name)
+  .input-group#follow-autocomplete data-autocomplete=@followable_users
     = f.input :follower_id, as: :string, label: false, input_html: { class: "form-control followers typeahead" }
     span.input-group-btn
       = f.submit t('relationship.submit'), class: "btn btn-primary", id: "relationship-submit"
